docs: add explanations for BOS/EOS and training loop

--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -410,12 +410,30 @@
     "    eos_token_id=None   # No end of sentence token for word model\n",
     ")\n",
     "\n",
-    "# Instantiate the model\n",
+    "# Instantiate the model: we use GPT2LMHeadModel, which is a GPT-2 model for language modeling/next token prediction\n",
     "model = GPT2LMHeadModel(config)\n",
     "model.to(device)\n",
     "\n",
     "# Print the number of parameters in the model\n",
     "print(f\"{sum(p.numel() for p in model.parameters())/1e6:.2f} M parameters\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### (Optional) Explanation: Why No BOS/EOS Tokens? \n",
+    "\n",
+    "You might notice `bos_token_id` (Beginning of Sequence) and `eos_token_id` (End of Sequence) are set to `None`. This is a deliberate simplification for this tutorial.\n",
+    "\n",
+    "**Why They Are Crucial for Real LLMs:**\n",
+    "- **To Define Boundaries:** In massive datasets with millions of documents, `BOS` and `EOS` tell the model where one document ends and another begins, preventing it from nonsensically connecting unrelated texts.\n",
+    "- **To Control Generation:** A real chatbot or assistant needs to know when to stop talking. It learns to generate an `EOS` token when its response is complete.\n",
+    "- **For Task Formatting:** These tokens separate the user's prompt from the model's desired output, helping the model learn the structure of a conversation or task.\n",
+    "\n",
+    "**Why We Don't Need Them Here:**\n",
+    "- **Continuous Data:** We train on a single, continuous stream of text. The model isn't learning from separate documents where boundaries are important.\n",
+    "- **Controlled Generation:** We manually start generation with a prompt and stop it after a fixed number of words. We don't rely on the model to decide when to stop."
    ]
   },
   {
