docs: incorporate latest notebook changes

--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -35,7 +35,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x10e876b70>"
+       "<torch._C.Generator at 0x11717ab70>"
       ]
      },
      "execution_count": 1,
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -505,6 +505,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on cpu...\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -515,7 +522,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on cpu...\n",
       "step 0: train loss 4.8432, val loss 4.8423\n",
       "step 500: train loss 0.1071, val loss 6.8329\n",
       "step 1000: train loss 0.0881, val loss 7.4115\n",
@@ -560,6 +566,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### (Optional) Explanation: The Training Loop - How a Model Learns\n",
+    "\n",
+    "The training loop is the core process where the model \"learns\" by repeatedly guessing, checking how wrong its guess is, and then slightly improving its guess. To understand this, let's use a simple analogy: **finding the average of a list of numbers** using Gradient Descent.\n",
+    "\n",
+    "Imagine our \"dataset\" is the list of numbers `[1, 2, 3, 4, 5]`. The true average is 3.\n",
+    "Our \"model\" is not a complex LLM, but just a single parameter: our current **guess** for the average, which we'll call `m`.\n",
+    "\n",
+    "The training process follows four key steps, repeated over and over.\n",
+    "\n",
+    "**Step 1: Initialize**\n",
+    "First, we make a random guess. Let's say we initialize our model with `m = 0`. This is the equivalent of the LLM's millions of parameters starting as random numbers.\n",
+    "\n",
+    "**Step 2: The Forward Pass (Predict & Calculate Loss)**\n",
+    "We see how wrong our guess is. We take a data point (e.g., the number `4`), compare it to our prediction (`m=0`), and calculate the error, or **loss**. A common loss function is the squared error.\n",
+    "\n",
+    "-   **Prediction:** Our current guess, `0`.\n",
+    "-   **Actual Value:** The data point, `4`.\n",
+    "-   **Loss:** `(prediction - actual)^2 = (0 - 4)^2 = 16`.\n",
+    "-   *LLM Equivalent:* This is `outputs = model(xb, labels=yb)`. The model takes an input `xb`, makes a prediction, and the loss is calculated by comparing it to the correct answer `yb`. This entire process is the **Forward Pass**.\n",
+    "\n",
+    "**Step 3: The Backward Pass (Calculate Gradients)**\n",
+    "Now for the magic: how do we improve our guess? The **gradient** tells us the direction of the error. For our loss `(m - 4)^2`, the gradient is `2 * (m - 4)`.\n",
+    "\n",
+    "-   **Gradient:** `2 * (0 - 4) = -8`.\n",
+    "-   **What this means:** The negative sign tells us we need to *increase* `m` to reduce the error. The magnitude (`8`) tells us we are far from the correct answer.\n",
+    "-   *LLM Equivalent:* `loss.backward()` does this for every single one of the model's millions of parameters. It calculates whether each parameter should be nudged up or down to reduce the final loss. This is the **Backward Pass**.\n",
+    "\n",
+    "**Step 4: The Update Step (Adjust the Model)**\n",
+    "We use the gradient to update our guess. We take a small step in the right direction, controlled by a `learning_rate` (e.g., 0.1).\n",
+    "\n",
+    "-   **Update Rule:** `new_m = old_m - learning_rate * gradient`\n",
+    "-   **New Guess:** `m = 0 - 0.1 * (-8) = 0.8`.\n",
+    "-   Our new guess, 0.8, is much closer to the true average of 3. We have learned!\n",
+    "-   *LLM Equivalent:* `optimizer.step()` performs this update for all parameters. (AdamW is just a more advanced version of this same principle).\n",
+    "\n",
+    "The **training loop** simply repeats these three steps (Forward Pass, Backward Pass, Update) thousands of times. With each iteration, the model's parameters get slightly less wrong, until they converge to values that produce accurate and coherent text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Explanation: The Overfitting Issue\n",
     "\n",
     "**Overfitting** is a common problem in machine learning. It occurs when a model learns the training data *too well*, including its noise and specific details, to the point where it performs poorly on new, unseen data (like our validation set or real-world data).\n",
@@ -572,7 +620,7 @@
     "-   **Training loss continues to decrease, while validation loss starts to increase or plateaus.** This is a classic indicator. It means the model is getting better at fitting the training data but worse (or no better) at generalizing to unseen data.\n",
     "-   The model might produce excellent results on examples it has seen during training but generate nonsensical or poor outputs for new inputs.\n",
     "\n",
-    "**(Optianal) How `dropout` helps (as a regularization technique):**\n",
+    "**(Optional) How `dropout` helps (as a regularization technique):**\n",
     "Dropout is a simple yet effective regularization technique to combat overfitting in neural networks. Here's how it works during training:\n",
     "1.  At each training step, for every neuron in a layer where dropout is applied, it is \"dropped out\" (i.e., temporarily removed from the network) with a certain probability (`dropout` rate).\n",
     "2.  This means the neuron, along with all its incoming and outgoing connections, is ignored during the forward pass and backward pass for that particular training iteration.\n",
@@ -596,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -606,17 +654,9 @@
       "Generating text...\n",
       "Starting context: 'sir: yet you must not think to fob off our disgrace with a tale'\n",
       "--- Generated Text ---\n",
-      "sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a more first: was time all body s rebell d the, ' against belly thus it remain ' midst ' accused:, accused:, ' hear,,,,,,,,: was ' hear,\n",
+      "sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a.: was time all body s rebell d the, ' against belly thus it that like gulf did i the o the,:, ' body idle unactive still the, cupboarding viand never like with rest where other\n",
       "--- Original Text ---\n",
-      "First Citizen:\n",
-      "Well, I'll hear it, sir: yet you must not think to\n",
-      "fob off our disgrace with a tale: but, an 't please\n",
-      "you, deliver.\n",
-      "\n",
-      "MENENIUS:\n",
-      "There was a time when all the body's members\n",
-      "Rebell'd against the belly, thus accused it:\n",
-      "That only like a gulf it did remain\n",
+      "sir: yet you must not think to fob off our disgrace with a tale: but, an 't please you, deliver. MENENIUS: There was a time when all the body's members Rebell'd against the belly, thus accused it: That only like a gulf it did remain\n",
       "----------------------\n"
      ]
     }
@@ -665,15 +705,7 @@
     "print(\"--- Generated Text ---\")\n",
     "print(generated_text)\n",
     "print(\"--- Original Text ---\")\n",
-    "print('''First Citizen:\n",
-    "Well, I'll hear it, sir: yet you must not think to\n",
-    "fob off our disgrace with a tale: but, an 't please\n",
-    "you, deliver.\n",
-    "\n",
-    "MENENIUS:\n",
-    "There was a time when all the body's members\n",
-    "Rebell'd against the belly, thus accused it:\n",
-    "That only like a gulf it did remain''')\n",
+    "print('''sir: yet you must not think to fob off our disgrace with a tale: but, an 't please you, deliver. MENENIUS: There was a time when all the body's members Rebell'd against the belly, thus accused it: That only like a gulf it did remain''')\n",
     "print(\"----------------------\")"
    ]
   },
@@ -681,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Explanation: Temperature and Sampling in Text Generation\n",
+    "#### Explanation: Sampling in Text Generation\n",
     "\n",
     "When our model generates text, it doesn't just pick the single most probable next word. Instead, it often uses a technique called **sampling**, sometimes influenced by a parameter called **temperature**.\n",
     "\n",
@@ -692,7 +724,7 @@
     "    Instead of always picking the word with the absolute highest probability (which is called greedy decoding and can lead to repetitive or boring text), we can *sample* from the probability distribution. This means a word that is slightly less probable might still be chosen, introducing randomness and creativity into the generated text.\n",
     "    `torch.multinomial(probs, num_samples=1)` is the function that performs this sampling. It takes the probability distribution (`probs`) and picks one word based on these probabilities.\n",
     "\n",
-    "3.  **Temperature:**\n",
+    "3.  **(Optional) Temperature:**\n",
     "    Temperature is a hyperparameter that controls the randomness of the sampling. It's applied to the logits *before* the softmax function.\n",
     "    -   **Low Temperature (e.g., < 1.0, closer to 0):** Dividing logits by a small number makes the differences between them larger. When softmax is applied, the probability distribution becomes \"sharper\" or \"spikier.\" The model becomes more confident and deterministic, tending to pick the most likely words. This can lead to more focused and coherent text, but potentially less creative.\n",
     "    -   **High Temperature (e.g., > 1.0):** Dividing logits by a larger number makes the differences between them smaller. The resulting softmax probability distribution becomes \"flatter\" or \"softer.\" The model becomes less confident, and less likely words have a higher chance of being selected. This increases randomness and creativity, but can also lead to more errors or nonsensical text.\n",
