docs: update notebook with latest changes

--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -628,9 +628,7 @@
     "\n",
     "**Why does this help?**\n",
     "-   **Prevents Co-adaptation:** Neurons become less reliant on specific other neurons because they can't be sure which ones will be active. This encourages each neuron to learn more robust features that are useful in conjunction with different random subsets of other neurons.\n",
-    "-   **Ensemble Effect (Implicit):** Training with dropout can be seen as training a large number of thinned networks (networks with different subsets of neurons). At test time (when dropout is turned off), using the full network can be viewed as an approximation of averaging the predictions of these many thinned networks.\n",
-    "\n",
-    "In our configuration, we have `dropout = 0.0`. This means dropout is currently turned off. If you observe overfitting (e.g., validation loss increasing significantly while training loss is very low), you could try increasing the `dropout` rate (e.g., to 0.1 or 0.2) to see if it improves generalization. Note that dropout is typically applied during training only and is turned off during evaluation or inference (which `model.eval()` and `model.train()` handle for relevant layers in PyTorch)."
+    "-   **Ensemble Effect (Implicit):** Training with dropout can be seen as training a large number of thinned networks (networks with different subsets of neurons). At test time (when dropout is turned off), using the full network can be viewed as an approximation of averaging the predictions of these many thinned networks."
    ]
   },
   {
@@ -644,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +652,7 @@
       "Generating text...\n",
       "Starting context: 'sir: yet you must not think to fob off our disgrace with a tale'\n",
       "--- Generated Text ---\n",
-      "sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a.: was time all body s rebell d the, ' against belly thus it that like gulf did i the o the,:, ' body idle unactive still the, cupboarding viand never like with rest where other\n",
+      "sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a more first: was time all body s rebell d the, ' against belly thus it sir yet must think fob our with rest where other did and, the instruments see hear devise instruct walk feel feel hear devise instruct\n",
       "--- Original Text ---\n",
       "sir: yet you must not think to fob off our disgrace with a tale: but, an 't please you, deliver. MENENIUS: There was a time when all the body's members Rebell'd against the belly, thus accused it: That only like a gulf it did remain\n",
       "----------------------\n"
@@ -667,8 +665,6 @@
     "model.eval()\n",
     "\n",
     "# Start with the first few words from our training data\n",
-    "start_words = block_size\n",
-    "text_test=\" \".join(decode(train_data[:start_words].tolist()).split()[:start_words])\n",
     "text_test=\"sir: yet you must not think to fob off our disgrace with a tale\"\n",
     "context = torch.tensor(encode(text_test), \n",
     "                      dtype=torch.long, device=device).unsqueeze(0)\n",
@@ -676,7 +672,7 @@
     "print(f\"Starting context: '{decode(context[0].tolist())}'\")\n",
     "\n",
     "# Simple generation loop\n",
-    "generated = context\n",
+    "generated = context #initialize the generated sequence with the context\n",
     "with torch.no_grad():\n",
     "    for _ in range(50):  # Generate 50 more words\n",
     "        # Get predictions for the current context\n",
