docs: sync notebook changes

--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -345,8 +345,8 @@
     "\n",
     "\n",
     "print(\"What happens when we train the model: each (X,Y) would be broken down into a sequence of (X',Y') pairs as the the real training data\")\n",
-    "print(\"X': the context of the words as the input X[:t+1]\")\n",
-    "print(\"Y': the next word as the target, Y'=Y[t] is the next word of X[:t+1]\")\n",
+    "print(\"X': the context of the words as the input X'=X[:t+1] for each t\")\n",
+    "print(\"Y': the next word as the target, Y'=Y[t] is the next word of X[:t+1] for each t\")\n",
     "for b in range(min(1, batch_size)):  # Show1 examples\n",
     "    for t in range(min(8, block_size)):  # Show first 8 positions\n",
     "        context_words = decode(xb[b, :t+1].tolist())\n",
@@ -637,7 +637,7 @@
     "\n",
     "Imagine a student who memorizes the answers to all the questions in a specific textbook (the training data) but doesn't understand the underlying concepts. When given a new exam with slightly different questions (the validation or test data), the student would likely fail. This is analogous to an overfitted model.\n",
     "\n",
-    "In our case, since the training data (the first part of the text) is very different from the testing data (the second part), the LLM cannot learn to predict the testing data from training. This is also called the out-of-distribution (OOD) problem.\n",
+    "In our case, there is another reason: since the training data (the first part of the text) is very different from the testing data (the second part), the LLM cannot learn to predict the testing data from training. This is also called the out-of-distribution (OOD) issue.\n",
     "\n",
     "**Signs of Overfitting:**\n",
     "-   **Training loss continues to decrease, while validation loss starts to increase or plateaus.** This is a classic indicator. It means the model is getting better at fitting the training data but worse (or no better) at generalizing to unseen data.\n",
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +670,7 @@
    "source": [
     "# Generation function - create a simple generation loop\n",
     "print(\"Generating text...\")\n",
-    "model.eval()\n",
+    "\n",
     "\n",
     "# Start with the first few words from our training data\n",
     "text_test=\"sir: yet you must not think to fob off our disgrace with a tale\"\n",
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
      "text": [
       "Input context: ' sir: yet you must not think to fob off our disgrace with a tale'\n",
       "--- Generated Text ---\n",
-      " sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a more first: was time all body s rebell d the,' against belly thus it remain' midst' accused:, accused:,' hear,,,,,,,,: was' hear,\n",
+      " sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a more first: was time all body s rebell d the,' against belly thus it sir yet must think fob our with rest where other did and, the instruments see hear devise instruct walk feel feel hear devise instruct\n",
       "--- Original Text ---\n",
       "sir: yet you must not think to fob off our disgrace with a tale: but, an 't please you, deliver. MENENIUS: There was a time when all the body's members Rebell'd against the belly, thus accused it: That only like a gulf it did remain\n",
       "----------------------\n"
@@ -702,7 +702,10 @@
    "source": [
     "print(f\"Input context: '{decode(context[0].tolist())}'\")\n",
     "# Simple generation loop\n",
+    "\n",
     "generated = context #initialize the generated sequence with the context\n",
+    "\n",
+    "model.eval()\n",
     "with torch.no_grad():\n",
     "    for _ in range(50):  # Generate 50 more words\n",
     "        # Get predictions for the current context\n",
@@ -723,6 +726,7 @@
     "        # Append to generated sequence\n",
     "        generated = torch.cat([generated, next_token], dim=1) # concatenate the generated sequence and the next word of the context\n",
     "\n",
+    "        \n",
     "# Decode the generated text\n",
     "generated_text = decode(generated[0].tolist())\n",
     "print(\"--- Generated Text ---\")\n",
