docs: sync latest notebook changes

--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x119366b70>"
+       "<torch._C.Generator at 0x10f462b90>"
       ]
      },
      "execution_count": 1,
@@ -43,13 +43,13 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "from torch.nn import functional as F\n",
-    "from transformers import GPT2Config, GPT2LMHeadModel\n",
-    "import random\n",
-    "import numpy as np\n",
+    "import torch # PyTorch: a library for deep learning\n",
+    "from torch.nn import functional as F # functional: a module for built functions\n",
+    "from transformers import GPT2LMHeadModel, GPT2Config # transformers: a library for untrained and pre-trained models\n",
+    "import random # random: a module for generating random numbers\n",
+    "import numpy as np # numpy: a library for numerical computing\n",
     "\n",
-    "# For reproducibility\n",
+    "# For reproducibility: set the random seed to 1\n",
     "random.seed(1)\n",
     "np.random.seed(1)\n",
     "torch.manual_seed(1)"
@@ -181,9 +181,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original: an answer\n",
-      "Encoded: [12, 14]\n",
-      "Decoded:  an answer\n"
+      "Original: what answer made you\n",
+      "Encoded: [115, 14, 56, 122]\n",
+      "Decoded:  what answer made you\n"
      ]
     }
    ],
@@ -210,7 +210,7 @@
     "    return result\n",
     "\n",
     "# Test encoding and decoding\n",
-    "test_text = \"an answer\"\n",
+    "test_text = \"what answer made you\"\n",
     "encoded = encode(test_text)\n",
     "decoded = decode(encoded)\n",
     "print(f\"Original: {test_text}\")\n",
@@ -320,17 +320,17 @@
       "Example of a batch:\n",
       "Context (X):  instruments did see and hear, devise, instruct,\n",
       "Target (Y):  did see and hear, devise, instruct, walk\n",
-      "What happens when we train the model: each (X,Y) would be broken down into a sequence of (X',Y') pairs as the the real training data\n",
-      "X': the context of the words as the input X[:t+1]\n",
-      "Y': the next word as the target, Y'=Y[t] is the next word of X[:t+1]\n",
-      "Context (X'): ' instruments' -> Target (Y'): 'did'\n",
-      "Context (X'): ' instruments did' -> Target (Y'): 'see'\n",
-      "Context (X'): ' instruments did see' -> Target (Y'): 'and'\n",
-      "Context (X'): ' instruments did see and' -> Target (Y'): 'hear'\n",
-      "Context (X'): ' instruments did see and hear' -> Target (Y'): ','\n",
-      "Context (X'): ' instruments did see and hear,' -> Target (Y'): 'devise'\n",
-      "Context (X'): ' instruments did see and hear, devise' -> Target (Y'): ','\n",
-      "Context (X'): ' instruments did see and hear, devise,' -> Target (Y'): 'instruct'\n",
+      "What happens when we train the model: each (X,Y) would be broken down into a sequence of (X'_t,Y'_t) pairs as the the real training data\n",
+      "X': the context of the words as the input X'_t=X[:t+1] for each t\n",
+      "Y': the next word as the target, Y'_t=Y[t] is the next word of X[:t+1] for each t\n",
+      "Context (X'_0): ' instruments' -> Target (Y'_0): 'did'\n",
+      "Context (X'_1): ' instruments did' -> Target (Y'_1): 'see'\n",
+      "Context (X'_2): ' instruments did see' -> Target (Y'_2): 'and'\n",
+      "Context (X'_3): ' instruments did see and' -> Target (Y'_3): 'hear'\n",
+      "Context (X'_4): ' instruments did see and hear' -> Target (Y'_4): ','\n",
+      "Context (X'_5): ' instruments did see and hear,' -> Target (Y'_5): 'devise'\n",
+      "Context (X'_6): ' instruments did see and hear, devise' -> Target (Y'_6): ','\n",
+      "Context (X'_7): ' instruments did see and hear, devise,' -> Target (Y'_7): 'instruct'\n",
       "\n"
      ]
     }
@@ -344,14 +344,14 @@
     "    print(f\"Target (Y): {decode(yb[b].tolist())}\")\n",
     "\n",
     "\n",
-    "print(\"What happens when we train the model: each (X,Y) would be broken down into a sequence of (X',Y') pairs as the the real training data\")\n",
-    "print(\"X': the context of the words as the input X'=X[:t+1] for each t\")\n",
-    "print(\"Y': the next word as the target, Y'=Y[t] is the next word of X[:t+1] for each t\")\n",
+    "print(\"What happens when we train the model: each (X,Y) would be broken down into a sequence of (X'_t,Y'_t) pairs as the the real training data\")\n",
+    "print(\"X': the context of the words as the input X'_t=X[:t+1] for each t\")\n",
+    "print(\"Y': the next word as the target, Y'_t=Y[t] is the next word of X[:t+1] for each t\")\n",
     "for b in range(min(1, batch_size)):  # Show1 examples\n",
     "    for t in range(min(8, block_size)):  # Show first 8 positions\n",
     "        context_words = decode(xb[b, :t+1].tolist())\n",
     "        target_word = itos[yb[b,t].item()]\n",
-    "        print(f\"Context (X'): '{context_words}' -> Target (Y'): '{target_word}'\")\n",
+    "        print(f\"Context (X'_{t}): '{context_words}' -> Target (Y'_{t}): '{target_word}'\")\n",
     "        if t == 7:  # Only show first 8 examples\n",
     "            break\n",
     "    print()\n",
@@ -528,13 +528,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training on cpu...\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -545,6 +538,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training on cpu...\n",
       "step 0: train loss 4.8432, val loss 4.8423\n",
       "step 500: train loss 0.1071, val loss 6.8329\n",
       "step 1000: train loss 0.0881, val loss 7.4115\n",
@@ -637,11 +631,12 @@
     "\n",
     "Imagine a student who memorizes the answers to all the questions in a specific textbook (the training data) but doesn't understand the underlying concepts. When given a new exam with slightly different questions (the validation or test data), the student would likely fail. This is analogous to an overfitted model.\n",
     "\n",
-    "In our case, there is another reason: since the training data (the first part of the text) is very different from the testing data (the second part), the LLM cannot learn to predict the testing data from training. This is also called the out-of-distribution (OOD) issue.\n",
-    "\n",
     "**Signs of Overfitting:**\n",
     "-   **Training loss continues to decrease, while validation loss starts to increase or plateaus.** This is a classic indicator. It means the model is getting better at fitting the training data but worse (or no better) at generalizing to unseen data.\n",
-    "-   The model might produce excellent results on examples it has seen during training but generate nonsensical or poor outputs for new inputs."
+    "-   The model might produce excellent results on examples it has seen during training but generate nonsensical or poor outputs for new inputs.\n",
+    "\n",
+    "\n",
+    "**In our case, there is another reason (and might be the major reason)** for the poor validation loss: since the training data (the first part of the text) is very different from the testing data (the second part), the LLM cannot learn to predict the testing data from training. This is also called the out-of-distribution (OOD) issue.\n"
    ]
   },
   {
@@ -655,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +687,7 @@
      "text": [
       "Input context: ' sir: yet you must not think to fob off our disgrace with a tale'\n",
       "--- Generated Text ---\n",
-      " sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a more first: was time all body s rebell d the,' against belly thus it sir yet must think fob our with rest where other did and, the instruments see hear devise instruct walk feel feel hear devise instruct\n",
+      " sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a more first: was time all body s rebell d the,' against belly thus it remain' midst' accused:, accused:,' hear,,,,,,,,: was' hear,\n",
       "--- Original Text ---\n",
       "sir: yet you must not think to fob off our disgrace with a tale: but, an 't please you, deliver. MENENIUS: There was a time when all the body's members Rebell'd against the belly, thus accused it: That only like a gulf it did remain\n",
       "----------------------\n"
