--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x10f462b90>"
+       "<torch._C.Generator at 0x10dfbeb90>"
       ]
      },
      "execution_count": 1,
@@ -657,14 +657,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating text...\n",
       "Input context: ' sir: yet you must not think to fob off our disgrace with a tale'\n"
      ]
     }
    ],
    "source": [
     "# Generation function - create a simple generation loop\n",
-    "print(\"Generating text...\")\n",
     "\n",
     "\n",
     "# Start with the first few words from our training data\n",
