Refactor data loading in adder tutorial

--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x10dfbeb90>"
+       "<torch._C.Generator at 0x10ecceb90>"
       ]
      },
      "execution_count": 1,
@@ -669,6 +669,8 @@
     "text_test=\"sir: yet you must not think to fob off our disgrace with a tale\"\n",
     "context = torch.tensor(encode(text_test), \n",
     "                      dtype=torch.long, device=device).unsqueeze(0) # unsqueeze(0): add a dimension at the beginning of the tensor to match the format of the training data\n",
+    "#Training data shape: (batch_size, block_size)\n",
+    "#Context shape: (1, block_size)\n",
     "\n",
     "print(f\"Input context: '{decode(context[0].tolist())}'\")\n",
     "\n"
@@ -676,14 +678,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input context: ' sir: yet you must not think to fob off our disgrace with a tale'\n",
+      "Input context: ' sir: yet you must not think to fob off our disgrace with a tale'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "--- Generated Text ---\n",
       " sir: yet you must not think to fob off our disgrace with a tale but an t you deliver menenius there a more first: was time all body s rebell d the,' against belly thus it remain' midst' accused:, accused:,' hear,,,,,,,,: was' hear,\n",
       "--- Original Text ---\n",
@@ -694,7 +702,7 @@
    ],
    "source": [
     "print(f\"Input context: '{decode(context[0].tolist())}'\")\n",
-    "# Simple generation loop\n",
+    "# Generation loop to generate text token by token\n",
     "\n",
     "generated = context #initialize the generated sequence with the context\n",
     "\n",
