Update adder tutorial

--- a/adder_tutorial/adder_tutorial.ipynb
+++ b/adder_tutorial/adder_tutorial.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x118142b70>"
+       "<torch._C.Generator at 0x118622b50>"
       ]
      },
      "execution_count": 1,
@@ -232,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 Dataset Class"
+    "### 3.3 Dataset Padding"
    ]
   },
   {
@@ -357,6 +357,11 @@
     }
    ],
    "source": [
+    "#We need to define a new model to train the addition classifier.\n",
+    "#Why? In the original nanoGPT tutorial, the number of classes is the same as the number of tokens in the vocabulary.\n",
+    "#However, in our case, the number of classes is the number of possible answers, different from the number of tokens in the vocabulary.\n",
+    "#So we can't use the original GPT2Model (with the language modeling/LM head) directly like in the nanoGPT tutorial.\n",
+    "\n",
     "class AdditionClassifier(nn.Module): #This is a class that inherits from the nn.Module class in PyTorch. \n",
     "    #Basicly it tells Python that this is a neural network model and can be used to train and test with commands in PyTorch.\n",
     "    \"\"\"Transformer model for addition classification.\"\"\"\n",
