--- a/adder_tutorial/adder_tutorial.ipynb
+++ b/adder_tutorial/adder_tutorial.ipynb
@@ -367,7 +367,8 @@
     "    \"\"\"Transformer model for addition classification.\"\"\"\n",
     "    \n",
     "    def __init__(self, input_vocab_size, num_classes, max_seq_len, n_embd, n_layer, n_head, dropout):\n",
-    "        super().__init__()\n",
+    "        #__init__ is a special method in Python that is called when an object of a class is created.\n",
+    "        super().__init__() #This is a way to call the __init__ method of the parent class (nn.Module) to initialize the model.\n",
     "        #the __init__ needs to define the architecture and parameters of the model.\n",
     "        \n",
     "        # GPT2 configuration for training the model from scratch\n",
@@ -392,7 +393,9 @@
     "        # Classification head is a linear layer that maps the feature vector to the logits of the answer.\n",
     "        # Indeed we are just applying multinomial logistic regression to the feature vector from the transformer.\n",
     "        self.classifier = nn.Linear(n_embd, num_classes)\n",
-    "     \n",
+    "        \n",
+    "        #(Multi) logistic regression: Softmax(Linear(x)): Linear(x)=W*x+b\n",
+    "        # x is the feature vector from the transformer.\n",
     "        \n",
     "    def forward(self, input_ids, labels=None):\n",
     "        # The forward function is to compute the loss and the logits from the input. (Get the prediction.)\n",
