--- a/nanogpt_tutorial/nanogpt_tutorial.ipynb
+++ b/nanogpt_tutorial/nanogpt_tutorial.ipynb
@@ -669,8 +669,8 @@
     "text_test=\"sir: yet you must not think to fob off our disgrace with a tale\"\n",
     "context = torch.tensor(encode(text_test), \n",
     "                      dtype=torch.long, device=device).unsqueeze(0) # unsqueeze(0): add a dimension at the beginning of the tensor to match the format of the training data\n",
-    "#Training data shape: (batch_size, block_size)\n",
-    "#Context shape: (1, block_size)\n",
+    "#Training data shape for X: (batch_size, block_size)\n",
+    "#Context shape in X: (1, block_size)\n",
     "\n",
     "print(f\"Input context: '{decode(context[0].tolist())}'\")\n",
     "\n"
