--- a/adder_tutorial/adder_tutorial.ipynb
+++ b/adder_tutorial/adder_tutorial.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x118622b50>"
+       "<torch._C.Generator at 0x119c7ab50>"
       ]
      },
      "execution_count": 1,
@@ -65,9 +65,9 @@
    "source": [
     "# Hyperparameters\n",
     "batch_size = 32     # How many independent sequences will we process in parallel to speed up the training process\n",
-    "max_iters = 5000       # Iteration of training \n",
+    "max_iters = 10000       # Iteration of training \n",
     "eval_interval = 250    # Interval of evaluation\n",
-    "learning_rate = 1e-3   # Learning rate for the optimizer\n",
+    "learning_rate = 5e-4   # Learning rate for the optimizer\n",
     "device = 'cpu'         # The device to run the model on\n",
     "eval_iters = 500       # The number of iterations to evaluate the model\n",
     "n_embd = 128           # The number of embedding dimensions\n",
@@ -514,28 +514,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on cpu...\n",
+      "Training on cpu...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "step 0: train loss 5.5264, train acc 0.0063, val loss 5.5268, val acc 0.0069\n",
-      "step 250: train loss 3.8002, train acc 0.0509, val loss 3.7940, val acc 0.0493\n",
-      "step 500: train loss 3.4174, train acc 0.0659, val loss 3.4177, val acc 0.0642\n",
-      "step 750: train loss 3.1778, train acc 0.0841, val loss 3.1719, val acc 0.0823\n",
-      "step 1000: train loss 2.9834, train acc 0.1010, val loss 2.9765, val acc 0.1053\n",
-      "step 1250: train loss 2.8332, train acc 0.1088, val loss 2.8277, val acc 0.1145\n",
-      "step 1500: train loss 2.6516, train acc 0.1446, val loss 2.6534, val acc 0.1427\n",
-      "step 1750: train loss 2.4139, train acc 0.2033, val loss 2.4199, val acc 0.1989\n",
-      "step 2000: train loss 1.6901, train acc 0.4544, val loss 1.6861, val acc 0.4588\n",
-      "step 2250: train loss 1.3634, train acc 0.5609, val loss 1.3564, val acc 0.5631\n",
-      "step 2500: train loss 1.0856, train acc 0.6967, val loss 1.0966, val acc 0.6970\n",
-      "step 2750: train loss 0.7378, train acc 0.8196, val loss 0.7383, val acc 0.8177\n",
-      "step 3000: train loss 0.5523, train acc 0.8793, val loss 0.5467, val acc 0.8810\n",
-      "step 3250: train loss 0.3128, train acc 0.9582, val loss 0.3164, val acc 0.9586\n",
-      "step 3500: train loss 0.2123, train acc 0.9719, val loss 0.2141, val acc 0.9702\n",
-      "step 3750: train loss 0.1787, train acc 0.9716, val loss 0.1793, val acc 0.9703\n",
-      "step 4000: train loss 0.1335, train acc 0.9844, val loss 0.1464, val acc 0.9799\n",
-      "step 4250: train loss 0.2296, train acc 0.9617, val loss 0.2271, val acc 0.9591\n",
-      "step 4500: train loss 0.4049, train acc 0.9357, val loss 0.3848, val acc 0.9397\n",
-      "step 4750: train loss 0.1220, train acc 0.9749, val loss 0.1239, val acc 0.9763\n",
-      "step 4999: train loss 0.1017, train acc 0.9833, val loss 0.1026, val acc 0.9828\n"
+      "step 250: train loss 3.9543, train acc 0.0429, val loss 3.9518, val acc 0.0426\n",
+      "step 500: train loss 3.4845, train acc 0.0601, val loss 3.4849, val acc 0.0575\n",
+      "step 750: train loss 3.2916, train acc 0.0643, val loss 3.2796, val acc 0.0660\n",
+      "step 1000: train loss 2.9483, train acc 0.1133, val loss 2.9451, val acc 0.1142\n",
+      "step 1250: train loss 2.9005, train acc 0.0975, val loss 2.8986, val acc 0.0995\n",
+      "step 1500: train loss 2.6854, train acc 0.1433, val loss 2.6879, val acc 0.1359\n",
+      "step 1750: train loss 2.5626, train acc 0.1527, val loss 2.5622, val acc 0.1502\n",
+      "step 2000: train loss 2.5399, train acc 0.1406, val loss 2.5426, val acc 0.1416\n",
+      "step 2250: train loss 2.4448, train acc 0.1704, val loss 2.4496, val acc 0.1676\n",
+      "step 2500: train loss 2.3579, train acc 0.1780, val loss 2.3600, val acc 0.1791\n",
+      "step 2750: train loss 2.3303, train acc 0.1704, val loss 2.3319, val acc 0.1744\n",
+      "step 3000: train loss 2.3421, train acc 0.1747, val loss 2.3439, val acc 0.1706\n",
+      "step 3250: train loss 2.3303, train acc 0.1639, val loss 2.3337, val acc 0.1669\n",
+      "step 3500: train loss 2.2421, train acc 0.1762, val loss 2.2364, val acc 0.1821\n",
+      "step 3750: train loss 2.1482, train acc 0.2088, val loss 2.1417, val acc 0.2154\n",
+      "step 4000: train loss 2.1599, train acc 0.2058, val loss 2.1662, val acc 0.2040\n",
+      "step 4250: train loss 2.2515, train acc 0.1657, val loss 2.2430, val acc 0.1663\n",
+      "step 4500: train loss 2.0701, train acc 0.2412, val loss 2.0734, val acc 0.2339\n",
+      "step 4750: train loss 2.0037, train acc 0.2532, val loss 2.0105, val acc 0.2494\n",
+      "step 5000: train loss 2.0095, train acc 0.2407, val loss 2.0192, val acc 0.2378\n",
+      "step 5250: train loss 2.0199, train acc 0.2367, val loss 2.0177, val acc 0.2354\n",
+      "step 5500: train loss 1.9180, train acc 0.2759, val loss 1.9169, val acc 0.2715\n",
+      "step 5750: train loss 1.8979, train acc 0.2744, val loss 1.8911, val acc 0.2782\n",
+      "step 6000: train loss 1.8301, train acc 0.2782, val loss 1.8249, val acc 0.2863\n",
+      "step 6250: train loss 1.7586, train acc 0.3328, val loss 1.7517, val acc 0.3401\n",
+      "step 6500: train loss 1.5352, train acc 0.4101, val loss 1.5361, val acc 0.4093\n",
+      "step 6750: train loss 1.3687, train acc 0.4733, val loss 1.3714, val acc 0.4715\n",
+      "step 7000: train loss 1.2480, train acc 0.5078, val loss 1.2422, val acc 0.5153\n",
+      "step 7250: train loss 1.1624, train acc 0.5299, val loss 1.1691, val acc 0.5258\n",
+      "step 7500: train loss 0.9933, train acc 0.6462, val loss 0.9867, val acc 0.6494\n",
+      "step 7750: train loss 0.9005, train acc 0.6934, val loss 0.8989, val acc 0.6926\n",
+      "step 8000: train loss 0.7819, train acc 0.7465, val loss 0.7797, val acc 0.7491\n",
+      "step 8250: train loss 0.7338, train acc 0.7621, val loss 0.7328, val acc 0.7633\n",
+      "step 8500: train loss 0.7454, train acc 0.7452, val loss 0.7440, val acc 0.7502\n",
+      "step 8750: train loss 0.5953, train acc 0.8357, val loss 0.5949, val acc 0.8344\n",
+      "step 9000: train loss 0.4732, train acc 0.9146, val loss 0.4686, val acc 0.9144\n",
+      "step 9250: train loss 0.4450, train acc 0.8788, val loss 0.4501, val acc 0.8762\n",
+      "step 9500: train loss 0.3208, train acc 0.9414, val loss 0.3296, val acc 0.9335\n",
+      "step 9750: train loss 0.3168, train acc 0.9283, val loss 0.3143, val acc 0.9283\n",
+      "step 9999: train loss 0.2362, train acc 0.9503, val loss 0.2380, val acc 0.9494\n"
      ]
     }
    ],
@@ -583,37 +609,37 @@
      "output_type": "stream",
      "text": [
       "--- Testing model on 30 examples (up to 2-digit numbers) ---\n",
-      "Problem  1: 69+67=136 -> Model predicted: 136 -> CORRECT\n",
-      "Problem  2: 87+27=114 -> Model predicted: 114 -> CORRECT\n",
-      "Problem  3: 29+26=55 -> Model predicted: 55 -> CORRECT\n",
-      "Problem  4: 10+15=25 -> Model predicted: 25 -> CORRECT\n",
-      "Problem  5: 97+26=123 -> Model predicted: 123 -> CORRECT\n",
-      "Problem  6: 22+63=85 -> Model predicted: 85 -> CORRECT\n",
-      "Problem  7: 21+86=107 -> Model predicted: 107 -> CORRECT\n",
-      "Problem  8: 5+60=65 -> Model predicted: 65 -> CORRECT\n",
-      "Problem  9: 22+91=113 -> Model predicted: 113 -> CORRECT\n",
-      "Problem 10: 76+43=119 -> Model predicted: 119 -> CORRECT\n",
-      "Problem 11: 23+26=49 -> Model predicted: 49 -> CORRECT\n",
-      "Problem 12: 1+99=100 -> Model predicted: 100 -> CORRECT\n",
-      "Problem 13: 89+3=92 -> Model predicted: 92 -> CORRECT\n",
-      "Problem 14: 93+71=164 -> Model predicted: 174 -> INCORRECT\n",
-      "Problem 15: 22+88=110 -> Model predicted: 110 -> CORRECT\n",
-      "Problem 16: 46+42=88 -> Model predicted: 88 -> CORRECT\n",
-      "Problem 17: 93+91=184 -> Model predicted: 184 -> CORRECT\n",
-      "Problem 18: 86+75=161 -> Model predicted: 161 -> CORRECT\n",
-      "Problem 19: 54+56=110 -> Model predicted: 110 -> CORRECT\n",
-      "Problem 20: 44+84=128 -> Model predicted: 128 -> CORRECT\n",
-      "Problem 21: 27+46=73 -> Model predicted: 73 -> CORRECT\n",
-      "Problem 22: 93+48=141 -> Model predicted: 141 -> CORRECT\n",
-      "Problem 23: 28+2=30 -> Model predicted: 30 -> CORRECT\n",
-      "Problem 24: 72+62=134 -> Model predicted: 134 -> CORRECT\n",
-      "Problem 25: 44+22=66 -> Model predicted: 66 -> CORRECT\n",
-      "Problem 26: 52+59=111 -> Model predicted: 111 -> CORRECT\n",
-      "Problem 27: 33+90=123 -> Model predicted: 123 -> CORRECT\n",
-      "Problem 28: 94+72=166 -> Model predicted: 166 -> CORRECT\n",
-      "Problem 29: 95+48=143 -> Model predicted: 143 -> CORRECT\n",
-      "Problem 30: 82+7=89 -> Model predicted: 89 -> CORRECT\n",
-      "Accuracy: 96.67% (29/30 correct)\n"
+      "Problem  1: 33+35=68 -> Model predicted: 69 -> INCORRECT\n",
+      "Problem  2: 50+88=138 -> Model predicted: 138 -> CORRECT\n",
+      "Problem  3: 36+28=64 -> Model predicted: 64 -> CORRECT\n",
+      "Problem  4: 10+63=73 -> Model predicted: 73 -> CORRECT\n",
+      "Problem  5: 33+3=36 -> Model predicted: 36 -> CORRECT\n",
+      "Problem  6: 9+25=34 -> Model predicted: 34 -> CORRECT\n",
+      "Problem  7: 84+16=100 -> Model predicted: 100 -> CORRECT\n",
+      "Problem  8: 40+88=128 -> Model predicted: 128 -> CORRECT\n",
+      "Problem  9: 63+96=159 -> Model predicted: 159 -> CORRECT\n",
+      "Problem 10: 0+60=60 -> Model predicted: 61 -> INCORRECT\n",
+      "Problem 11: 4+55=59 -> Model predicted: 59 -> CORRECT\n",
+      "Problem 12: 14+43=57 -> Model predicted: 57 -> CORRECT\n",
+      "Problem 13: 92+12=104 -> Model predicted: 104 -> CORRECT\n",
+      "Problem 14: 57+13=70 -> Model predicted: 70 -> CORRECT\n",
+      "Problem 15: 86+97=183 -> Model predicted: 183 -> CORRECT\n",
+      "Problem 16: 98+42=140 -> Model predicted: 140 -> CORRECT\n",
+      "Problem 17: 93+30=123 -> Model predicted: 123 -> CORRECT\n",
+      "Problem 18: 6+50=56 -> Model predicted: 56 -> CORRECT\n",
+      "Problem 19: 59+70=129 -> Model predicted: 129 -> CORRECT\n",
+      "Problem 20: 96+96=192 -> Model predicted: 193 -> INCORRECT\n",
+      "Problem 21: 26+40=66 -> Model predicted: 66 -> CORRECT\n",
+      "Problem 22: 21+63=84 -> Model predicted: 84 -> CORRECT\n",
+      "Problem 23: 14+13=27 -> Model predicted: 28 -> INCORRECT\n",
+      "Problem 24: 14+49=63 -> Model predicted: 63 -> CORRECT\n",
+      "Problem 25: 48+15=63 -> Model predicted: 63 -> CORRECT\n",
+      "Problem 26: 85+27=112 -> Model predicted: 112 -> CORRECT\n",
+      "Problem 27: 96+45=141 -> Model predicted: 141 -> CORRECT\n",
+      "Problem 28: 89+43=132 -> Model predicted: 132 -> CORRECT\n",
+      "Problem 29: 62+47=109 -> Model predicted: 109 -> CORRECT\n",
+      "Problem 30: 94+23=117 -> Model predicted: 117 -> CORRECT\n",
+      "Accuracy: 86.67% (26/30 correct)\n"
      ]
     }
    ],
@@ -678,29 +704,29 @@
       "Question: 2+3=\n",
       "Predicted answer: 5\n",
       "Top 3 predictions:\n",
-      "  5: 0.265\n",
-      "  4: 0.182\n",
-      "  6: 0.144\n",
+      "  5: 0.229\n",
+      "  8: 0.136\n",
+      "  6: 0.096\n",
       "\n",
       "Question: 5+4=\n",
-      "Predicted answer: 11\n",
+      "Predicted answer: 10\n",
       "Top 3 predictions:\n",
-      "  11: 0.444\n",
-      "  8: 0.236\n",
-      "  9: 0.077\n",
+      "  10: 0.196\n",
+      "  11: 0.191\n",
+      "  8: 0.160\n",
       "\n",
       "Question: 9+9=\n",
-      "Predicted answer: 17\n",
+      "Predicted answer: 15\n",
       "Top 3 predictions:\n",
-      "  17: 0.734\n",
-      "  16: 0.122\n",
-      "  13: 0.030\n"
+      "  15: 0.236\n",
+      "  13: 0.166\n",
+      "  12: 0.114\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "17"
+       "15"
       ]
      },
      "execution_count": 11,
